# mc-clone

./: CMakeLists.txt
cmake/: fetch_content.cmake  find_packages.cmake
lib/: CMakeLists.txt
lib/camera/include/camera/: OrthoCamera.hpp  PerspectiveCamera.hpp
lib/camera/src/: PerspectiveCamera.cpp
lib/gfx/: CMakeLists.txt
lib/gfx/include/gfx/: Shader.hpp  controls.hpp
lib/gfx/src/: Shader.cpp
src/: CMakeLists.txt  State.cpp  Window.cpp  main.cpp
src/include/: State.hpp  Window.hpp  World.hpp
